--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <section>
             <div class="container">
                 <h2>
-                    Uděláme vše za jednu nízkou cenu! <br />
-                    Nabízíme odborné konzultace a editaci v oblasti webových stránek.
+                    Nabízíme odborné konzultace a editaci v oblasti webových stránek. <br />
+                    Uděláme vše za jednu nízkou cenu! 
                 </h2>
                 <h3>
                     <em>
