--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="Style-main.css" />
-    <title>Název Firmy</title>
+    <link rel="stylesheet" type="text/css" href="Main/Style-main.css" />
+    <title>OMNICRAFT</title>
 </head>
 <body>
     <article>
         <header>
-            <h1>Název Firmy</h1>
+            <h1>Omnicraft</h1>
         </header>
         <section>
             <div class="container">
@@ -22,6 +22,7 @@
                         <a href="o_nas.html">O nás</a> <br />
                         <a href="kontakt.index">Kontaktuj nás</a><br />
                         <!-- <a href="reference.index">Reference</a> -->
+                        <!-- <a href="patreon.html">Podpř nás</a> -->
                     </em>
                 </h3>
             </div>
