--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 </h2>
                 <h3>
                     <em>
-                        <a href="o_nas.html">O nás</a> <br />
-                        <a href="kontakt.index">Kontaktuj nás</a><br />
-                        <!-- <a href="reference.index">Reference</a> -->
-                        <!-- <a href="patreon.html">Podpř nás</a> -->
+                        <a href="About_as/About_as.html">O nás</a> <br />
+                        <a href="Contact/Contact.index">Kontaktuj nás</a><br />
+                        <!-- <a href="Reference/Reference.index">Reference</a> -->
+                        <!-- <a href="Patreon/Patreon.html">Podpř nás</a> -->
                     </em>
                 </h3>
             </div>
