--- a/About_as/About_as.html
+++ b/About_as/About_as.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="Style-About_as.css" />
-    <title>OMNICRAFT O nás</title>
+    <title>OMNICRAFT - O NÁS</title>
 </head>
 <body>
     <article>
