--- a/About_as/About_as.html
+++ b/About_as/About_as.html
@@ -18,6 +18,12 @@
             <div class="html5">
                 <img class="css3" id="html5" src="images/HTML5.png" />
             </div>
+            <div class="php">
+                <img class="php" id="php" src="images/PHP.png" />
+            </div>
+            <div class="js">
+                <img class="js" id="js" src="images/JS1.jpg" />
+            </div>
             <div class="container">
                 <h2>Co nabízíme?</h2>
                 <p>
