--- a/About_as.html
+++ b/About_as.html
@@ -4,11 +4,20 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="About_as/Style-About_as.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>OMNICRAFT - O NÁS</title>
 </head>
 <body>
     <article>
         <header>
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
             <h1>O nás</h1>
         </header>
         <section>
@@ -36,8 +45,9 @@
             </div>
         </section>
         <footer>
-
         </footer>
     </article>
+
+    <script src="About_as/Script-Menu.js"></script>
 </body>
 </html>
