--- a/About_as.html
+++ b/About_as.html
@@ -11,11 +11,11 @@
     <article>
         <header>
             <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+                <button onclick="myFunction()" id="center" class="dropbtn">Dropdown</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">Domů</a>
+                    <a href="#" class="active">O nás</a>
+                    <a href="#">Kontakt</a>
                 </div>
             </div>
             <h1>O nás</h1>
