--- a/About_as.html
+++ b/About_as.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="About_as/Style-About_as.css" />
+    <link rel="stylesheet" type="text/css" href="About_as/Style-Menu.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>OMNICRAFT - O NÁS</title>
 </head>
@@ -11,11 +12,11 @@
     <article>
         <header>
             <div class="dropdown">
-                <button onclick="myFunction()" id="center" class="dropbtn">Dropdown</button>
+                <button onclick="myFunction()" id="center" class="dropbtn">Menu</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#">Domů</a>
-                    <a href="#" class="active">O nás</a>
-                    <a href="#">Kontakt</a>
+                    <a href="index.html">Domů</a>
+                    <a href="About_as.html" id="active">O nás</a>
+                    <a href="Contact.html">Kontakt</a>
                 </div>
             </div>
             <h1>O nás</h1>
