--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 </h2>
                 <h3>
                     <em>
-                        <a href="About_as/About_as.html">O nás</a> <br />
-                        <a href="Contact/Contact.index">Kontaktuj nás</a><br />
+                        <a href="About_as.html">O nás</a> <br />
+                        <a href="Contact.index">Kontaktuj nás</a><br />
                         <!-- <a href="Reference/Reference.index">Reference</a> -->
                         <!-- <a href="Patreon/Patreon.html">Podpř nás</a> -->
                     </em>
