--- a/About_as.html
+++ b/About_as.html
@@ -41,7 +41,8 @@
                     Programování webových stránek a wedesignu podle nejmodernějších standrdů v <span class="ruda">HTML5, CSS3, JavaScript a PHP.</span><br /><br />
                     Kód od nás je čitelný na 100%.<br /><br />
                     Údržbu a úpravu Vašich stránek.<br /><br />
-                    Dlouhodobou spolupráci na Vašem projektu.<br />
+                    Dlouhodobou spolupráci na Vašem projektu.<br /><br />
+                    Vše co děláme, děláme s radostí!
                 </p>
             </div>
         </section>
