--- a/Contact.html
+++ b/Contact.html
@@ -3,9 +3,23 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="Contact/Style-Contact.css" />
+    <link rel="stylesheet" type="text/css" href="Contact/Style-Menu.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>OMNICRAFT - KONTAKT</title>
 </head>
 <body>
+    <article>
+        <header>
 
+        </header>
+        <section>
+
+        </section>
+        <footer>
+
+        </footer>
+    </article>
+    <script src="Contact/Script-Menu.js"></script>
 </body>
 </html>
