--- a/Contact.html
+++ b/Contact.html
@@ -11,10 +11,39 @@
 <body>
     <article>
         <header>
-
+            <div class="dropdown">
+                <button onclick="myFunction()" id="center" class="dropbtn">Menu</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="index.html">Domů</a>
+                    <a href="About_as.html">O nás</a>
+                    <a href="Contact.html" id="active">Kontakt</a>
+                </div>
+            </div>
+            <h1>Kontakt</h1>
         </header>
         <section>
-
+            <div class="container">
+                <h2>
+                    Tady nás najdeš. <br />
+                    K dispozici jsme Po - Pá 9:00 - 20:00.
+                </h2>
+                <h3>
+                <em>
+                    <a href="#" class="menu">Instagram</a>   <br />
+                    <a href="#" class="menu">Facebook</a>    <br />
+                    <a href="#" class="menu">Linkedin?</a>   <br />
+                </em>
+                </h3>
+                <p>
+                    Tel.:
+                </p>
+                <p>
+                    e-mail: <br />
+                </p>
+                <p>
+                    A nebo můžeš použít náš <em><a href="#" class="menu">kontaktní formulář.</a></em>
+                </p>
+            </div>
         </section>
         <footer>
 
