--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <em>
                         <a href="About_as.html">O nás</a> <br />
                         <a href="Contact.index">Kontaktuj nás</a><br />
-                        <!-- <a href="Reference/Reference.index">Reference</a> -->
-                        <!-- <a href="Patreon/Patreon.html">Podpř nás</a> -->
+                        <a href="Reference/Reference.index">Reference</a><br />
+                        <a href="Patreon/Patreon.html">Podpoř nás</a><br />
                     </em>
                 </h3>
             </div>
