--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>
                     <em>
                         <a href="About_as.html">O nás</a> <br />
-                        <a href="Contact.index">Kontaktuj nás</a><br />
+                        <a href="Contact.html">Kontaktuj nás</a> <br />
                         <a href="Reference/Reference.index">Reference</a><br />
                         <a href="Patreon/Patreon.html">Podpoř nás</a><br />
                     </em>
