--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
     <article>
         <header>
             <div class="dropdown">
-                <button onclick="myFunction()" id="center" class="dropbtn">Menu</button>
+                <button onclick="myFunction()" class="dropbtn">Menu</button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="index.html">Domů</a>
                     <a href="About_as.html">O nás</a>
