--- a/About_as.html
+++ b/About_as.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <h2>Co nabízíme?</h2>
                 <p>
-                    Nabízíme odborné konzultace v oblastni webových stránek.<br /><br />
+                    Odborné konzultace v oblastni webových stránek.<br /><br />
                     Programování webových stránek a wedesignu podle nejmodernějších standrdů v <span class="ruda">HTML5, CSS3, JavaScript a PHP.</span><br /><br />
                     Kód od nás je čitelný na 100%.<br /><br />
                     Údržbu a úpravu Vašich stránek.<br /><br />
